# setdip

./: CMakeLists.txt  Makefile  README.md  exports.yml  kernel.c  main.c
include/: plugins.h
payload/: Makefile  payload.c  payload.h
src/: kernel.c
